--- a/public/installation/index.html
+++ b/public/installation/index.html
@@ -26,17 +26,17 @@
     <link href="../installation/index.xml" rel="alternate" type="application/rss+xml" title="安装维护 :: HaBox 技术支持站">
     <link href="../installation/index.print.html" rel="alternate" type="text/html" title="安装维护 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725546434" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725546434" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725546434" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725546434" rel="stylesheet">
-    <link href="../css/fonts.css?1725546434" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725546434" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725546434" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725546434" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725546434" rel="stylesheet">
-    <link href="../css/print.css?1725546434" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725546434"></script>
+    <link href="../css/fontawesome-all.min.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725546551" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725546551" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725546551" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725546551" rel="stylesheet">
+    <link href="../css/fonts.css?1725546551" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725546551" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725546551" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725546551" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725546551" rel="stylesheet">
+    <link href="../css/print.css?1725546551" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725546551"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -83,7 +83,7 @@
             </div>
             <div class="topbar-button topbar-button-print" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/index.print.html" title="打印整章 (CTRL&#43;ALT&#43;p)"><i class="fa-fw fas fa-print"></i></a>
             </div>
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../index.html" title="Hugo Relearn Theme (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../index.html" title="Ha-Box技术支持站 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/instructions/index.html" title="HA盒子使用说明书（开箱即用） (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -204,13 +204,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725546434" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725546434" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725546434" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725546434" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725546434" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725546434" defer></script>
-        <script src="../js/search.js?1725546434" defer></script>
+        <script src="../js/auto-complete.js?1725546551" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725546551" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725546551" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725546551" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725546551" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725546551" defer></script>
+        <script src="../js/search.js?1725546551" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -296,8 +296,8 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725546434" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725546434" defer></script>
-    <script src="../js/theme.js?1725546434" defer></script>
+    <script src="../js/clipboard.min.js?1725546551" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725546551" defer></script>
+    <script src="../js/theme.js?1725546551" defer></script>
   </body>
 </html>
